# audio_transcriptor

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
Audio/: audio.py
Balance/: transaction.py
Task/: MLtask.py
Thread/: thread.py
Users/: user.py
app/: .env  Dockerfile  api.py  main.py  pyproject.toml  requirements.txt
app/routes/: audio_save.py  auth.py  balance.py  pages.py  pydantic_models.py  thread.py  transactions.py  users.py
app/src/Balance/: balance.py  transaction.py
app/src/DataBase/: config.py  engine.py  init_db.py  models.py
app/src/MLModels/: base_model.py  lang_detector.py  transcript_model.py  whisper_model.py
app/src/MQ/: consumer.py  producer.py
app/src/Thread/: thread.py
app/src/Users/: user.py  user_repo.py
app/src/auth/: authenticate.py  jwt_handler.py
app/src/kernel/: task_kernel.py
app/src/service/: auth.py
app/src/service/auth/: cookieauth.py  registerform.py
app/src/tests/: conftest.py  db_test.py  test_auth.py  test_balance.py  test_double_registration.py  test_full_user_scenario.py  test_not_enough_balance.py  test_some_negative.py  test_threads_history.py  test_transactions.py  test_user.py
app/view/: admin.html  balance.html  base.html  index.html  login.html  register.html  thread.html
kernel/: task_kernel.py
nginx/: nginx.conf
